<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_timeline">
    <!--NOTE: the `android:id` should match the id in bottom_navigation_menu.xml-->
    <fragment
        android:id="@+id/nav_timeline"
        android:name="com.qdd.ui.timeline.TimelineFragment"
        android:label="@string/timeline"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.qdd.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_project"
        android:name="com.qdd.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.qdd.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>