<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:layout_marginBottom="4dp"
    android:focusable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/default_day"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/default_month"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/material_on_background_disabled"
            app:layout_constraintBottom_toBottomOf="@id/txt_day"
            app:layout_constraintStart_toEndOf="@id/txt_day" />

        <TextView
            android:id="@+id/txt_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/default_project"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintBottom_toBottomOf="@id/txt_day"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/icon_of_spending_or_saving"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_day"
            app:srcCompat="@drawable/baseline_call_made" />

        <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintStart_toEndOf="@+id/img_icon"
            app:layout_constraintTop_toTopOf="@+id/img_icon" />

        <TextView
            android:id="@+id/txt_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{timeline.comments}"
            android:textColor="@color/material_on_background_disabled"
            app:layout_constraintStart_toStartOf="@+id/txt_category"
            app:layout_constraintTop_toBottomOf="@+id/txt_category" />

        <TextView
            android:id="@+id/txt_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/value_money"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="@color/pay"
            app:layout_constraintBottom_toBottomOf="@+id/img_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>